mudanca de termo

--- a/k-median/buscalocal.tex
+++ b/k-median/buscalocal.tex
@@ -49,5 +49,5 @@ Assim, conseguimos concluir que
 \[ - k \delta C \leq C^* - C + 2 \sum_{\ell = 1}^k \ \sum_{\substack{ j : \sigma^*(j)\neq i_\ell^*,\\  \sigma(j) = i_\ell}} c_{\sigma^*(j)j} \leq 5C^* - C,\]
 consequentemente, 
 \[C \leq \frac{5C^*}{1 - k\delta} = (5+\epsilon)C^*\]
-em que a igualdade vale se escolhermos $\delta \coloneqq \frac{\epsilon}{(5+\epsilon)k}$.
+em que a igualdade vale se definirmos $\delta \coloneqq \frac{\epsilon}{(5+\epsilon)k}$.
 \end{proof}
