primal-dual do k-median finalizado excluindo derandomizacao

--- a/k-median/buscalocal.tex
+++ b/k-median/buscalocal.tex
@@ -51,3 +51,5 @@ consequentemente,
 \[C \leq \frac{5C^*}{1 - k\delta} = (5+\epsilon)C^*\]
 em que a igualdade vale se definirmos $\delta \coloneqq \frac{\epsilon}{(5+\epsilon)k}$.
 \end{proof}
+
+\red{MOSTRAR QUE O ALGORITMO É POLINOMIAL.}
