--- a/main.tex
+++ b/main.tex
@@ -70,6 +70,7 @@ Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial
     \input{facility/intro.tex}
 
 \subsection{Algoritmos baseados em programação linear}
+    \label{facility:PL}
     \input{facility/relaxação.tex}
 
 \subsubsection{Método primal-dual}
@@ -87,6 +88,7 @@ Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial
 % \newpage
 
 \subsection{Algoritmo guloso}
+    \label{facility:guloso&fitting}
     \input{facility/guloso.tex}
 
 \subsection{Inaproximabilidade}
@@ -97,6 +99,12 @@ Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial
 
 \subsection{Busca local}
     \input{k-median/buscalocal.tex}
+    
+\subsection{Algoritmos baseados em programação linear}
+    \input{k-median/proglineares.tex}
+
+\subsubsection{Relaxação Lagrangeana}
+    \input{k-median/rellan.tex}
 
 \subsection{Inaproximabilidade}
     \input{k-median/inaprox.tex}
